[package]
name = "ssc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = [ "std" ], default-features = false }
calamine = { version = "0.18", features = [ "dates" ], default-features = false }
clap = { version = "3", features = [ "std", "derive" ], default-features = false }
reqwest = { version = "0.11", features = [ "socks" ], default-features = false }
shadowsocks-service = { version = "1", features = [ "local", "local-http", "stream-cipher" ], default-features = false }
port_scanner = { version = "0.1", default-features = false }
tokio = { version = "1", features = [ "macros", "rt" ], default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
